[gd_scene load_steps=6 format=3 uid="uid://xi5ou2mueasm"]

[ext_resource type="Script" uid="uid://dxp2uaww6cwoe" path="res://ui/main_menu.gd" id="1_t7e0r"]
[ext_resource type="FontFile" uid="uid://c7vxohdnq87sk" path="res://assets/fonts/you-re-gone/Youre Gone.otf" id="2_rmr83"]
[ext_resource type="Texture2D" uid="uid://nfh4rj3rqb8c" path="res://icon.svg" id="3_8uxxo"]
[ext_resource type="FontFile" uid="uid://bt50el5y4lmc" path="res://assets/fonts/rimouski/rimouski sb.otf" id="3_wk0pr"]

[sub_resource type="LabelSettings" id="LabelSettings_p8ri8"]
font = ExtResource("2_rmr83")
font_size = 48
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.3137255)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7e0r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LeftContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/LeftContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
layout_mode = 2
text = "IronHavoc"
label_settings = SubResource("LabelSettings_p8ri8")

[node name="NewGameButton" type="Button" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wk0pr")
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wk0pr")
text = "Load Game"

[node name="CharacterViewButton" type="Button" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
layout_mode = 2
text = "Character View"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wk0pr")
toggle_mode = true
text = "Options"

[node name="AboutButton" type="Button" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wk0pr")
toggle_mode = true
text = "About"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wk0pr")
text = "Quit"

[node name="RightOptions" type="TabContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
current_tab = 0

[node name="Sound" type="Label" parent="MarginContainer/HBoxContainer/RightOptions"]
layout_mode = 2
text = "Settings on sounds here"
metadata/_tab_index = 0

[node name="Control" type="Label" parent="MarginContainer/HBoxContainer/RightOptions"]
visible = false
layout_mode = 2
text = "User can change key assignment here"
metadata/_tab_index = 1

[node name="Graphics" type="Label" parent="MarginContainer/HBoxContainer/RightOptions"]
visible = false
layout_mode = 2
text = "Graphics properties for quality or performance"
metadata/_tab_index = 2

[node name="Other" type="Label" parent="MarginContainer/HBoxContainer/RightOptions"]
visible = false
layout_mode = 2
text = "Random settings here"
metadata/_tab_index = 3

[node name="RightAbout" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/RightAbout"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_wk0pr")
bbcode_enabled = true
text = "[center]

[font size=32]About IronHavoc[/font]

IronHavoc is a simple but addictive, mixing shooting, leveling, and different kinds of enemies.

IronHavoc started as just a try on, and each day kept on growing up to this stage.

[font size=18](c) 2025 - Veigatec Games[/font]"

[node name="RightLoadGame" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/RightLoadGame"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer"]
layout_mode = 2
columns = 4

[node name="Item1" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item1"]
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("3_8uxxo")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item1"]
layout_mode = 2
text = "LVL 1: When it started"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item1"]
layout_mode = 2

[node name="ItemLoadButton" type="Button" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item1/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="ItemSaveButton" type="Button" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item1/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Item2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item2"]
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("3_8uxxo")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item2"]
layout_mode = 2
text = "LVL 1: When it started"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item2"]
layout_mode = 2

[node name="ItemLoadButton" type="Button" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item2/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="ItemSaveButton" type="Button" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item2/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Item3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item3"]
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = ExtResource("3_8uxxo")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item3"]
layout_mode = 2
text = "LVL 1: When it started"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item3"]
layout_mode = 2

[node name="ItemLoadButton" type="Button" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item3/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="ItemSaveButton" type="Button" parent="MarginContainer/HBoxContainer/RightLoadGame/CenterContainer/GridContainer/Item3/HBoxContainer"]
layout_mode = 2
text = "Save"

[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer/CharacterViewButton" to="." method="_on_character_view_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/LeftContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
